# pi-weather-station

./: .gitignore  Cargo.toml  README.md  example.Config.toml
src/: config.rs  main.rs
src/api/: cache.rs  mod.rs
src/data/: mod.rs  process.rs  types.rs
src/db/: database.rs  mod.rs
src/hardware/: analog.rs  anemometer.rs  button.rs  dht.rs  display.rs  events.rs  mod.rs  rain.rs  vane.rs
src/static/: index.html
src/static/css/: main.css
src/static/js/: script.js
static/: index.html
static/css/: main.css
static/js/: script.js
