[package]
name = "pi-weather-station"
version = "0.1.0"
authors = [ "Noah Templet <contact@noahtemplet.dev>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.12.0"
chrono = "0.4.19"
crossbeam-channel = "0.5.1"