[package]
name = "pi-weather-station"
version = "0.1.0"
authors = [ "Noah Templet <contact@noahtemplet.dev>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.12.0"
chrono = "0.4.19"
crossbeam-channel = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.18.2"
postgres = "0.19.1"
toml = "0.5.8"
openssl = { version = "0.10.35", features = [ "vendored" ] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6.7"
lazy_static = "1.4.0"
job_scheduler = "1.2.1"